[fix] changed body height and width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,10 +51,9 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border m-0 p-0;
   }
   body {
-    @apply bg-background text-foreground;
-    @apply overflow-hidden
+    @apply bg-background text-foreground m-0 p-0 overflow-x-hidden overflow-y-auto h-[100dvh] w-[100dvw];
   }
 }
