--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,55 @@
     @apply bg-background text-foreground m-0 p-0 overflow-x-hidden overflow-y-auto h-[100dvh] w-[100dvw];
   }
 }
+
+.loader {
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #353535;
+  display: block;
+  margin: 1rem auto;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotationBack 1s ease-in-out infinite reverse;
+}
+
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  left: 0;
+  top: 0;
+  transform: rotate(45deg);
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #2e2e2e;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background: rgb(0, 0, 0);
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+*{
+  scrollbar-width: thin;
+}
